# PaperParrot

./: .env.template  .gitignore  AgentFactory.py  DocumentProcessor.py  README.md  app.py  dataloader.py  improvements.txt  pdfprocessor.py  pyproject.toml  utils.py
