[tool.poetry]
name = "investmentadv"
version = "0.1.0"
description = "A POC for analyzing Stock's annual report PDF using LLM"
authors = ["Apoorv Jain <4poorv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "*"
streamlit = "1.22.0"
python-dotenv = "*"
chardet = "*"
altair = "*"
protobuf = "*"
openai = "*"
pypdf = "*"
chromadb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
